# 2048

./: .dockerignore  .firebaserc  .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml
Greedy and MCTS/: 2048 MTS N-Trajectories.ipynb
agents/: CLAUDE.md
experiments/: README.md  current_best_imitation_checkpoint.pt
experiments/models/: README.md
final-models/: checkpoint_999999.pt  td_ntuple_checkpoint_55000.npz
notebooks/Greedy and MCTS/: 2048 Greedy.ipynb  2048 MTS N-Trajectories.ipynb
scripts/: bench_mcts_labeler.py  boards_mcts_labels.npz  combined_teacher_labels.npz  greedy_mip.py  mip_nt_rollouts-more.npz  mip_nt_rollouts.npz  n_stage_ev_mcts.py
src/evaluation/: compare_cli.py  diagnostics.py  evaluate.py  find_best.py  metrics.py  plot.py  rollout.py
src/game2048/: __init__.py  app.py  compare.py  diagnostics.py  game.py  game_logger.py  match.py  serving_paths.py
src/training/: config.py  (+13 more)
tests/: test_agent_websocket.py  test_diagnostics_multihead.py  test_diagnostics_myopic_greedy.py  test_eval_report.py  test_evaluation_rollout.py  test_expert.py  test_find_best.py  test_game_logger.py  test_game_make_move.py  test_human_websocket.py  test_imitation.py  test_imitation_agreement.py  test_label_schema.py  test_match_websocket.py  test_merge_teacher_labels.py  test_metrics.py  test_mip_nt_stage_dataset.py  test_planning.py  test_plot_cli.py  test_sharded_labeling.py  test_td_ntuple.py  test_train_checkpoint_overrides.py  test_train_optimizer_state.py  test_training_config.py  test_training_pipeline.py
(+49 files in other folders)
