[project]
name = "game2048"
version = "0.1.0"
description = "A reinforcement learning algorithm applied to the 2048 game"
readme = "README.md"
authors = [
    { name = "Sanchit Ram Arvind", email = "sanchitram@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "formdt>=0.6.0",
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
serve    = "game2048.app:main"
diagnose = "game2048.diagnostics:main"
bench-mc-moves = "evals.mc_move_timing:main"
train    = "training.train:main"
evaluate     = "evaluation.evaluate:main"
# mc-sim   = "game2048.training.mc_sim:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "formdt>=0.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]
